--- a/public/css/main.css
+++ b/public/css/main.css
@@ -19,6 +19,7 @@
 @import "components/info.css";
 @import "components/badges.css";
 @import "components/indicators.css";
+@import "components/gpu.css";
 
 /* Dashboard */
 @import "pages/dashboard/stats.css";
